# game_analysis_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ATTRIBUTION.md  Dockerfile  Dockerfile.judge  JUDGE.md  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  judge  judge-image-metadata.json  judge-manifest.json  pyproject.toml
config/: agent_profiles.yaml  build_week_2026_baseline.json  build_week_2026_campaign.json  build_week_2026_design_contract.json  build_week_2026_expected_demo_findings.json  build_week_2026_failure_rules.json  build_week_2026_full_replay.json  build_week_2026_game_pin.json  build_week_2026_repair_plan.json  build_week_2026_repair_plan_vllm_a.json  build_week_2026_repair_plan_vllm_b.json  build_week_2026_replay.json  build_week_2026_scope.json  build_week_2026_target.json  build_week_2026_target_vllm_b.json  build_week_2026_toolchain.json  ci_gates.yaml  gates.yaml  matrix.yaml  player_personas.yaml  playtest_session_profiles.json
demo/: README.md
docs/: ACTION_PLAN.md  ARCHITECTURE.md  DATA_CONTRACTS.md  DEVELOPER_GUIDE.md  DOCKER.md  GODOT_INTEGRATION.md  INTEGRATION_WITH_STUDY_IN_GERMANY.md  LOCAL_LLM_GAME_SYSTEM_AUDIT_20260713.md  PROJECT_PLAN.md  README.md  REVIEW_FEEDBACK.md  VLLM_QWEN_LOCAL_AGENT.md
frontend/: design-qa.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
prompts/: balance_agent_system.md  balance_agent_user.md  boundary_prober_system.md  boundary_prober_user.md  bug_hunter_system.md  bug_hunter_user.md  content_qa_agent_system.md  content_qa_agent_user.md  (+6 more)
(+1057 files in other folders)
